YAMLs/004_postgres_deployment.yaml
# Copyright 2022 Universidad Politécnica de Madrid
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak-postgres
  name: keycloak-postgres
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: "keycloak"
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: keycloak-secret
              key: databasepass
        - name: POSTGRES_USER
          value: "keycloak"
        - name: PGDATA
          value: "/var/lib/postgresql/data/pgdata"
        image: postgres
        imagePullPolicy: IfNotPresent
        name: keycloak-postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/db
          name: postgres-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data
status: {}
