YAMLs/006_keycloak-deployment.yaml
# Copyright 2022 Universidad Politécnica de Madrid
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: development
  labels:
    app: keycloak
  annotations:
    prometheus.io/scrape: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:18.0.0
        command: ["/bin/sh", "-c"]
        args:
          - echo starting;
            printenv;
            /opt/keycloak/bin/kc.sh build --db postgres;
            /opt/keycloak/bin/kc.sh show-config; 
            /opt/keycloak/bin/kc.sh -v start --db-url-host=keycloak-postgres:5432 --db-url-database=keycloak --db-username=${KC_DB_USERNAME} --db-password=${KC_DB_PASSWORD};
        ports:
        - name: http
          containerPort: 8080
