YAMLs/007_keycloak-vs.yaml
# Copyright 2023 Universidad Politécnica de Madrid
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
    - "*"
  gateways:
    - gh-gateway
  http:
    - match:
        - uri:
            exact: /auth/api/auth
        - uri:
            exact: /auth/api/refresh
      rewrite:
        uri: "/auth/realms/GravitateHealth/protocol/openid-connect/token"
      route:
        - destination:
            host: keycloak.default.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: keycloak.default.svc.cluster.local
            port:
              number: 8080
